# Game4Grasp

./: .gitignore  README.md  validate.py
grasp/: CMakeLists.txt  README.md
grasp/include/: grasp.hpp
grasp/include/core/: grasp_solver.hpp  object_optimizer.hpp  robot_optimizer.hpp
grasp/include/kinematics_models/: kinematics_model.hpp  robot_registry.hpp
grasp/include/kinematics_models/robot_model_sheets/: allegro.hpp  barrett.hpp  leaphand.hpp  shadowhand.hpp
grasp/include/utils/: utils.hpp  vec_type.hpp
grasp/pybind/: grasp_bind.cpp
grasp/source/: grasp.cpp
grasp/source/core/: grasp_solver.cpp
grasp/source/core/object_optimizer/: constraints.cpp  gradients.cpp  object_optimizer.cpp  setup.cpp
grasp/source/core/robot_optimizer/: constraints.cpp  forward.cpp  gradients.cpp  robot_optimizer.cpp  setup.cpp
grasp/source/utils/: utils.cpp
grasp/test/: test_grasp.cpp
grasp_pywrapper/: wrapper.py
validation/: CMapDataset.py  README.md  isaac_main.py  isaac_validator.py  validate_utils.py
validation/utils/: hand_model.py
